--- a/Jquerydemo/Views/Home/Selectordemo.cshtml
+++ b/Jquerydemo/Views/Home/Selectordemo.cshtml
@@ -15,7 +15,7 @@
         background-color: yellow;
     }
 </style>
-@*<div id="demo">
+<div id="demo">
         <ul>
             <li><label id="lbl"></label></li>
             <li></li>
@@ -26,7 +26,7 @@
             <li><input type="submit" id="subbtn" value="Submit" /></li>
         </ul>
 
-    </div>*@
+    </div>
 
 <div id="div1">
     <p></p>
@@ -42,36 +42,36 @@
 
 
 @* Jq basics*@
-@*<script>
+<script>
         $(document).ready(function() {
 
 
         });
-    </script>*@
+    </script>
 
 @* Jq Selector by tag name*@
 
-@*<script>
+<script>
         $(document).ready(function() {
             $('p').append(' This is paragraph');
             $('div').append('This is div');
         });
-    </script>*@
+    </script>
 
 @* Jq selector by tag id*@
 
-@*<script>
+<script>
         $(document).ready(function() {
             $('#div1').append('this is div with id div1');
             $('#div2').append('this is div with id div2');
             $('#para1').append('this is paragraph with id para1');
         });
-    </script>*@
+    </script>
 
 @* Jq Selector by attribute name*@
 
-@*<script>
+<script>
         $(document).ready(function() {
             $('[class]').append('this is an class attribute');
         });
-    </script>*@
+    </script>
