AP-Removed unwanted  files

--- a/Jquerydemo/Views/AjaxDemo/Index.cshtml
+++ b/Jquerydemo/Views/AjaxDemo/Index.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="row">
+    <h2>Index</h2>
 
-<h2>Index</h2>
-
-<input type="button" id="btnget" value="Get Details"/>
-
+    <input type="button" id="btnget" value="Get Details" />
+</div>
 
 @section Scripts{
     <script>
