--- a/Jquerydemo/Views/Shared/_Layout.cshtml
+++ b/Jquerydemo/Views/Shared/_Layout.cshtml
@@ -17,13 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Selectordemo", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Selectordemo", "Selectordemo", "Home")</li>
+                    <li>@Html.ActionLink("JqMethods", "JqMethods", "Home")</li>
+                    <li>@Html.ActionLink("TraversingDom", "TraversingDom", "Home")</li>
+                    <li>@Html.ActionLink("Eventdemo", "Eventdemo", "Home")</li>                  
+                    <li>@Html.ActionLink("AjaxDemo", "Index", "AjaxDemo")</li>                  
+                    <li>@Html.ActionLink("Gojs", "Index", "Gojs")</li>                  
+                    <li>@Html.ActionLink("SVGDemo", "Index", "SVGDemo")</li>                  
                 </ul>
             </div>
         </div>
